Fix hamburger menu position on mobile

--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -47,8 +47,8 @@ nav {
 .menu-button {
   position: absolute;
   cursor: pointer;
-  top: 0.75rem;
-  right: 1rem;
+  top: 1.5rem;
+  right: 1.5rem;
   width: 30px;
   height: 21px;
   display: flex;
@@ -73,7 +73,7 @@ nav {
     opacity: 1;
     transform: translateY(0);
     background-color: transparent;
-    
+
     ul {
       padding-top: 0;
       display: flex;
@@ -86,4 +86,3 @@ nav {
     }
   }
 }
-
